--- a/portal/templates/patient_profile.html
+++ b/portal/templates/patient_profile.html
@@ -30,7 +30,7 @@
               <br/>
             </div>
             <div class="modal-footer">
-              <button onclick="handleLoginAs(event);" type="button" class="btn btn-default">{{ _("OK") }}</button>
+              <button onclick="profileObj.handleLoginAs(event);" type="button" class="btn btn-default">{{ _("OK") }}</button>
               <button type="button" class="btn btn-default" data-dismiss="modal">{{ _("Cancel") }}</button>
             </div>
           </div>
